--- a/Pixel_Web_Project-main/Pixel/main.html
+++ b/Pixel_Web_Project-main/Pixel/main.html
@@ -17,9 +17,9 @@
             </div>
              <div class="list">  
                 <ul>
-                    <li><a href="main.html"><i class="fa-solid fa-house"></i>Home</a></li>
-                    <li><a href="login.html"><i class="fa-solid fa-user"></i> Hesabım</a></li>
-                    <li><a href="sepet.html"><i class="fa-solid fa-cart-shopping"></i> Sepetim</a></li>     
+                    <li><a href="main.html"><i class="fa-solid fa-house"></i> Home</a></li>
+                    <li><a href="login.html"><i class="fa-solid fa-user"></i> Account</a></li>
+                    <li><a href="cart.html"><i class="fa-solid fa-cart-shopping"></i> Shopping &nbsp; Cart</a></li>     
                 </ul>
             </div> 
             <form id="sform" class="src active">
