--- a/Pixel_Web_Project-main/Pixel/cart.html
+++ b/Pixel_Web_Project-main/Pixel/cart.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="sepet.css">
+    <link rel="stylesheet" href="cart.css">
     <title>Pixel Shop</title>
 </head>
 
@@ -17,9 +17,9 @@
             </div>
              <div class="list">  
                 <ul>
-                    <li><a href="main.html"><i class="fa-solid fa-house"></i>Home</a></li>
+                    <li><a href="main.html"><i class="fa-solid fa-house"></i> Home</a></li>
                     <li><a href="login.html"><i class="fa-solid fa-user"></i> Hesabım</a></li>
-                    <li><a href="sepet.html"><i class="fa-solid fa-cart-shopping"></i> Sepetim</a></li>     
+                    <li><a href="cart.html"><i class="fa-solid fa-cart-shopping"></i> Shopping &nbsp; Cart</a></li>     
                 </ul>
             </div> 
     </nav>
@@ -58,7 +58,7 @@
 
   </section>
 
-    <script src="sepet.js"></script>
+    <script src="cart.js"></script>
 
     
 </body>
