--- a/Pixel_Web_Project-main/Pixel/product.html
+++ b/Pixel_Web_Project-main/Pixel/product.html
@@ -19,7 +19,7 @@
                 <ul>
                     <li><a href="main.html"><i class="fa-solid fa-house"></i> Home</a></li>
                     <li><a href="login.html"><i class="fa-solid fa-user"></i> Account</a></li>
-                    <li><a href="sepet.html"><i class="fa-solid fa-cart-shopping"></i> Shopping &nbsp; Cart</a></li>     
+                    <li><a href="cart.html"><i class="fa-solid fa-cart-shopping"></i> Shopping &nbsp; Cart</a></li>     
                 </ul>
             </div> 
     </nav>
@@ -27,9 +27,9 @@
     <div class="shp">
         <h1 id="product-name">Ürün Adı</h1>
         <img id="product-image" src="product.jpg" alt="Ürün Fotoğrafı">
-        <p id="product-price">Fiyat: $10.00</p>
+        <p id="product-price">Price: $10.00</p>
         <p id="product-description">Kısa Açıklama: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus eget placerat nunc.</p>
-        <button id="add-to-cart" class="add-to-cart" data-name="Ürün Adı" data-price="10.00">Sepete Ekle</button>
+        <button id="add-to-cart" class="add-to-cart" data-name="Ürün Adı" data-price="10.00">Add to cart</button>
     </div>
 
     <script src="product.js"></script>
