--- a/Pixel_Web_Project-main/Pixel/account.html
+++ b/Pixel_Web_Project-main/Pixel/account.html
@@ -13,11 +13,11 @@
     
     <nav class="container">
             <div class="logo">
-                <a href="main.html"><h1>Pixel Shop</h1></a>  
+                <a href="main.php"><h1>Pixel Shop</h1></a>  
             </div>
              <div class="list">  
                 <ul>
-                    <li><a href="main.html"><i class="fa-solid fa-house"></i> Home</a></li>
+                    <li><a href="main.php"><i class="fa-solid fa-house"></i> Home</a></li>
                     <li><a href="login.html"><i class="fa-solid fa-user"></i> Account</a></li>
                     <li><a href="cart.html"><i class="fa-solid fa-cart-shopping"></i> Shopping &nbsp; Cart</a></li>     
                 </ul>
